# capitalist-tools

./: .env.example  .gitignore  README.md  pyproject.toml
capitalist_tools/: __init__.py  cli.py  client.py  env.py  telegram_bot.py
codex-skills/capitalist-api/: SKILL.md
codex-skills/capitalist-api/agents/: openai.yaml
codex-skills/capitalist-api/references/: api-summary.md
codex-skills/capitalist-api/scripts/: capitalist_cli.py
tests/: test_capitalist_tools.py
